--- a/index.html
+++ b/index.html
@@ -9,16 +9,28 @@
     <title>Decodificador</title>
 </head>
 <body>
-    <img src="img/Logo.png" alt="alura-logo">
-    <textarea name="" id="" cols="30" rows="10"></textarea>
-    <p>Solo letras minusculas sin acentos</p>
+    <aside>
+        <img src="img/Logo.png" alt="alura-logo">
+    </aside>
+    <main>
+        <textarea name="" id="" cols="30" rows="10" placeholder="Ingrese texto aqui"></textarea>
+        <section>
+            <div class="info-text">
+                <img src="img/bi_exclamation-circle-fill.png" alt="info-img"><p>Solo letras minusculas sin acentos</p>
+            </div>
+            <div class="button-group">
+                <button class="primary-button">Encriptar</button>
+                <button class="secondary-button">Desencriptar</button>
+            </div>
+        </section>
+    </main>
     <aside>
         <div>
             <section>
                 <img src="img/Muñeco.png" alt="alura-img">
             </section>
             <section>
-                <h4>Ningún mensaje fue encontrado</h4>
+                <h2>Ningún mensaje fue encontrado</h2>
                 <p>Ingresa el texto que deseas encriptar o desencriptar</p>
             </section>
         </div>
@@ -27,9 +39,5 @@
             <button>Copiar</button>
         </div>
     </aside>
-    <div>
-        <button>Encriptar</button>
-        <button>Desencriptar</button>
-    </div>
 </body>
 </html>
