--- a/index.html
+++ b/index.html
@@ -9,35 +9,39 @@
     <title>Decodificador</title>
 </head>
 <body>
-    <aside>
-        <img src="img/Logo.png" alt="alura-logo">
-    </aside>
     <main>
-        <textarea name="" id="" cols="30" rows="10" placeholder="Ingrese texto aqui"></textarea>
-        <section>
-            <div class="info-text">
-                <img src="img/bi_exclamation-circle-fill.png" alt="info-img"><p>Solo letras minusculas sin acentos</p>
+        <div class="logo">
+            <img src="img/Logo.png" alt="alura-logo">
+        </div>
+        <div class="input">
+            <textarea type="text" name="text" placeholder="Ingrese texto aqui"></textarea>
+            <!-- <textarea name="" id="" cols="30" rows="10" placeholder="Ingrese texto aqui"></textarea> -->
+            <section>
+                <div class="info-text">
+                    <img src="img/bi_exclamation-circle-fill.png" alt="info-img">
+                    <p>Solo letras minusculas sin acentos</p>
+                </div>
+                <div class="button-group">
+                    <button class="primary-button">Encriptar</button>
+                    <button class="secondary-button">Desencriptar</button>
+                </div>
+            </section>
+        </div>
+        <div class="result">
+            <div>
+                <section>
+                    <img src="img/Muñeco.png" alt="alura-img">
+                </section>
+                <section class="text">
+                    <h3>Ningún mensaje fue encontrado</h3>
+                    <p>Ingresa el texto que deseas encriptar o desencriptar</p>
+                </section>
             </div>
-            <div class="button-group">
-                <button class="primary-button">Encriptar</button>
-                <button class="secondary-button">Desencriptar</button>
+            <div hidden>
+                <textarea name="" id="" cols="30" rows="10"></textarea>
+                <button>Copiar</button>
             </div>
-        </section>
+        </div>
     </main>
-    <aside>
-        <div>
-            <section>
-                <img src="img/Muñeco.png" alt="alura-img">
-            </section>
-            <section>
-                <h2>Ningún mensaje fue encontrado</h2>
-                <p>Ingresa el texto que deseas encriptar o desencriptar</p>
-            </section>
-        </div>
-        <div hidden>
-            <textarea name="" id="" cols="30" rows="10"></textarea>
-            <button>Copiar</button>
-        </div>
-    </aside>
 </body>
 </html>
