Corregir encriptamiento para vacios

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </div>
             </section>
         </div>
-        <div class="result">
+        <div class="result-container">
             <div id="no-result">
                 <section>
                     <img src="img/Muñeco.png" alt="alura-img">
@@ -37,9 +37,7 @@
                 </section>
             </div>
             <div id="result" hidden>
-                <textarea type="text" name="text" id="result-text" placeholder="Ingrese texto aqui">
-                    Hola mundo
-                </textarea>
+                <textarea type="text" name="text" id="result-text" placeholder="Ingrese texto aqui"></textarea>
                 <button onclick="copy()">Copiar</button>
             </div>
         </div>
