Corrigiendo estilos para textarea oculto

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </section>
         </div>
         <div class="result-container">
-            <div id="no-result">
+            <div class="no-result" id="no-result">
                 <section>
                     <img src="img/Muñeco.png" alt="alura-img">
                 </section>
@@ -36,7 +36,7 @@
                     <p>Ingresa el texto que deseas encriptar o desencriptar</p>
                 </section>
             </div>
-            <div id="result" hidden>
+            <div class="result" id="result" hidden>
                 <textarea type="text" name="text" id="result-text" placeholder="Ingrese texto aqui"></textarea>
                 <button onclick="copy()">Copiar</button>
             </div>
